# fastapi-hands-on

./: .gitignore  README.md  app.py  pyproject.toml
tests/: test_trello.py
trello/: models.py  services.py
trello/db/: base.py
