[tool.poetry]
name = "trello"
version = "0.1.0"
description = ""
authors = ["Patrick Rodrigues <pythrick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = {version = "^0.13.4", extras = ["standard"]}
SQLAlchemy = "^1.4.6"
aiosqlite = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
